syntax = "proto3";

package CPS;

service ELIN_CPS {
  rpc GetOneFromStaff (StaffRequest) returns (Staff);
  rpc GetOneFromPosition (PositionRequest) returns (Positions);
  rpc GetOneFromDepartment (DepartmentRequest) returns (Departments);
  rpc GetOneFormCustomers (CustomerRequest) returns (Customers); 
  rpc GetOneFromOrders (OrderRequest) returns (Orders);
  rpc GetOneFromProducts (ProductRequest) returns (Products);

  rpc GetOrderList (OrderRequest) returns (stream Orders);
  rpc GetProductList (ProductRequest) returns (stream Products);
  rpc GetCustomersList (CustomerRequest) returns (stream Customers);
  rpc GetStaffList (StaffRequest) returns (stream Staff);
  rpc GetPositionList (PositionRequest) returns (stream Positions);
  rpc GetDepartmentList (DepartmentRequest) returns (stream Departments);

  rpc AddOrder (Orders) returns (Response);
  rpc AddStaff (Staff) returns (Response);
  rpc AddSCustomer (Customers) returns (Response);
  rpc AddProduct (Products) returns (Response);
  rpc AddPosition (Positions) returns (Response);
  rpc AddDepartment (Departments) returns (Response);

  rpc DeleteProduct (ProductRequest) returns (Response);
  rpc DeleteStaff (StaffRequest) returns (Response);
  rpc DeletePosition (PositionRequest) returns (Response);
  rpc DeleteDepartment (DepartmentRequest) returns (Response);

  rpc UpdateOrder (Orders) returns (Response);
  rpc UpdateCustomer (Customers) returns (Response);
  rpc UpdateProduct (Products) returns (Response);
  rpc UpdateStaff (Staff) returns (Response);
  rpc UpdatePosition (Positions) returns (Response);
  rpc UpdateDepartment (Departments) returns (Response);
}
message Customers{
	int32 CustomerID = 1;
    string Name = 2;
    string SecondName = 3;
    string Organization = 4;
    string Address = 5;
	string PaymentAccount = 6;
	int64 DateOfContractCompletion = 7;
}
message CustomerRequest{
	int32 CustomerID = 1;
}
message Products{
	int32 ProductID = 1;
	string ProductName = 2;
	int32 NumberOfGlasses = 3;
	double Width = 4;
	double Heght = 5;
	double Weight = 6;
}
message ProductRequest{
	int32 ProductID = 1;
}
message OrderRequest{
	int32 OrderID = 1;
}
message Orders{
	int32 OrderID = 1;
	Customers Customer = 2;
	int64 Date = 4;
	string AllProducts = 5;
	string Condition = 6;
    Staff Staff = 7;
}

message Staff {
  int32 Passport = 1;
  string Name = 2;
  string SecondName = 3;
  string MiddleName = 4;
  int64 BDate = 5;
  string Gender = 6;
  int64 DateOfReceipt = 7;
  string Experience = 8;
  string Department = 9;
  string Position = 10;
}
message StaffRequest {
  int32 Passport = 1;
}
message Positions {
  int32 PositionID = 1;
  string Position = 2;
  double Salary = 3;
}
message PositionRequest {
  int32 PositionID = 1;
}
message Departments {
  int32 DepartmentID = 1;
  string Department = 2;
  int32 NumberOfEmployees = 3;
}
message DepartmentRequest {
  int32 DepartmentID = 1;
}
	enum ResponseEnum {
		UNKNOWN = 0;
		ADD_OK = 1;
		ADD_FAIL = 2;
		DELETE_OK = 3;
		DELETE_FAIL = 4;
		UPDATE_OK = 5;
		UPDATE_FAIL = 6;
	}
message Response {
	ResponseEnum ResponseMessage = 1;
}
